--- a/personal-home-page-template/src/index.html
+++ b/personal-home-page-template/src/index.html
@@ -20,7 +20,7 @@ Make the first test pass by adding a <header> </header>-->
   <body>
     <header class="c-site-header">
       <nav aria-label="Main Site Links" class="navigation">
-        <h2 class="logoFont">Daniela Spac</h2>
+        <h2 class="logoFont">Daniela Spac...</h2>
         <div class="navButtons">
           <a class="navLink" href="#education">education</a>
           <a class="navLink" href="#video">video</a>
