--- a/personal-home-page-template/src/index.html
+++ b/personal-home-page-template/src/index.html
@@ -133,7 +133,7 @@ Make the first test pass by adding a <header> </header>-->
         <p class="centeredText">Romanian, Russian, English</p>
       </div>
       <footer class="c-site-footer">
-        <p>Author: Spac Daniela.</p>
+        <p>Author: Spac Daniela</p>
       </footer>
       <!-- Your test console.
 Don't delete!-->
