--- a/personal-home-page-template/src/index.html
+++ b/personal-home-page-template/src/index.html
@@ -132,6 +132,12 @@ Make the first test pass by adding a <header> </header>-->
         <h3 class="myHeader">Language Skills</h3>
         <p class="centeredText">Romanian, Russian, English</p>
              </div>
+      <div id="list"><img id ="image"></img></div>
+  
+<button id="button">Previous</button>
+ 
+<button id="button2">Next</button>
+
       <footer class="c-site-footer">
         <p>Author: Spac Daniela</p>
       </footer>
